First recode commit Broke something with ntdLuckyBlock, not satisfied with the vertical handling in the block break event