@@ -1,15 +1,16 @@
 package us.thezircon.play.autopickup.utils;
 
-import org.bukkit.Bukkit;
-import org.bukkit.ChatColor;
+import net.kyori.adventure.text.Component;
+import net.kyori.adventure.text.format.NamedTextColor;
 import us.thezircon.play.autopickup.AutoPickup;
+import org.bukkit.Bukkit;
 
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
-import java.util.Arrays;
+import java.util.List;
 import java.util.logging.Logger;
 
 import static com.google.common.net.HttpHeaders.USER_AGENT;
@@ -17,108 +18,119 @@ import static com.google.common.net.HttpHeaders.USER_AGENT;
 public class VersionChk {
 
     private static final AutoPickup PLUGIN = AutoPickup.getPlugin(AutoPickup.class);
-
     private static final Logger log = Logger.getLogger("Minecraft");
 
     public static String[] changelog;
 
-    public static void checkVersion(String name, int id) throws Exception { //https://api.spigotmc.org/legacy/update.php?resource=76103"
+    // Hardcoded Components for messages
+    private static final Component CHECKING_MSG = Component.text(" Checking for new version...", NamedTextColor.GRAY);
+    private static final Component UP_TO_DATE_MSG = Component.text("Plugin is up-to-date.", NamedTextColor.DARK_GREEN);
+    private static final Component UPDATE_FOUND_MSG = Component.text(" UPDATE FOUND:", NamedTextColor.RED);
+    private static final Component VERSION_LABEL = Component.text(" Version: ", NamedTextColor.GOLD);
+    private static final Component USING_VERSION_LABEL = Component.text(" Using Version: ", NamedTextColor.AQUA);
+    private static final Component NO_CONNECTION_MSG = Component.text(" Cannot check for update's - No internet connection!", NamedTextColor.LIGHT_PURPLE);
+    private static final Component CHANGELOG_BULLET = Component.text("  - ", NamedTextColor.YELLOW);
 
-        //https://api.github.com/repos/MrButtersDEV/AutoPickup/releases/latest
-        String url = "https://api.spigotmc.org/legacy/update.php?resource="+id;
-        String url2 = "https://raw.githubusercontent.com/MrButtersDEV/AutoPickup/master/update-info.txt";
+    public static void checkVersionAsync(String pluginName, int resourceId) {
+        Bukkit.getScheduler().runTaskAsynchronously(PLUGIN, () -> {
+            try {
+                PLUGIN.getMsg().sendToConsole(CHECKING_MSG);
 
-        URL obj = new URL(url);
-        HttpURLConnection con = (HttpURLConnection) obj.openConnection();
+                String spigotVersion = fetchContent("https://api.spigotmc.org/legacy/update.php?resource=" + resourceId);
+                String changelogContent = fetchContent(
+                        "https://raw.githubusercontent.com/MrButtersDEV/AutoPickup/master/update-info.txt");
 
-        // optional default is GET
-        con.setRequestMethod("GET");
+                changelog = changelogContent.split("- ");
 
-        //add request header
-        con.setRequestProperty("User-Agent", USER_AGENT);
+                String pluginVersion = Bukkit.getServer().getPluginManager().getPlugin(pluginName).getDescription().getVersion();
 
-        int responseCode = con.getResponseCode();
-        PLUGIN.getServer().getConsoleSender().sendMessage(PLUGIN.getMsg().getPrefix() + ChatColor.RESET +" Checking for new verison...");
+                Bukkit.getScheduler().runTask(PLUGIN, () -> {
+                    if (spigotVersion.equals(pluginVersion)) {
+                        PLUGIN.getMsg().sendToConsole(UP_TO_DATE_MSG
+                        );
+                    } else {
+                        PLUGIN.getMsg().sendToConsole(UPDATE_FOUND_MSG
+                                        .append(Component.space())
+                                        .append(Component.text("https://www.spigotmc.org/resources/" + resourceId + "/", NamedTextColor.GREEN))
+                        );
+                        PLUGIN.getMsg().sendToConsole(VERSION_LABEL
+                                        .append(Component.text(spigotVersion, NamedTextColor.GREEN))
+                                        .append(USING_VERSION_LABEL)
+                                        .append(Component.text(pluginVersion, NamedTextColor.DARK_AQUA))
+                        );
 
-        BufferedReader in = new BufferedReader(new InputStreamReader(con.getInputStream()));
-        String inputLine;
-        StringBuffer response = new StringBuffer();
+                        PLUGIN.UP2Date = false;
+                        for (String s : changelog) {
+                            if (!s.isEmpty()) {
+                                PLUGIN.getMsg().sendToConsole(CHANGELOG_BULLET.append(Component.text(s)));
+                            }
+                        }
+                    }
 
-        while ((inputLine = in.readLine()) != null) {
-            response.append(inputLine);
-        }
-        in.close();
+                    try {
+                        updateConfigIfNeeded();
+                    } catch (Exception e) {
+                        log.warning("Failed to update config: " + e.getMessage());
+                    }
+                });
 
-        URL obj2 = new URL(url2);
-        HttpURLConnection con2 = (HttpURLConnection) obj2.openConnection();
-
-        // optional default is GET
-        con2.setRequestMethod("GET");
-
-        //add request header
-        con2.setRequestProperty("User-Agent", USER_AGENT);
-
-        int responseCode2 = con2.getResponseCode();
-
-        BufferedReader in2 = new BufferedReader(new InputStreamReader(con2.getInputStream()));
-        String inputLine2;
-        StringBuffer response2 = new StringBuffer();
-
-        while ((inputLine2 = in2.readLine()) != null) {
-            response2.append(inputLine2);
-        }
-        in2.close();
-
-        changelog = response2.toString().split("- ");
-
-        //print result
-        String spigotVerison = response.toString();
-        String ver = Bukkit.getServer().getPluginManager().getPlugin(name).getDescription().getVersion();
-        if (spigotVerison.equals(ver)) {
-            PLUGIN.getServer().getConsoleSender().sendMessage(PLUGIN.getMsg().getPrefix() + " " + ChatColor.DARK_GREEN + "Plugin is up-to-date.");
-        } else {
-            PLUGIN.getServer().getConsoleSender().sendMessage(PLUGIN.getMsg().getPrefix() + ChatColor.RED + " UPDATE FOUND: " + ChatColor.GREEN + "https://www.spigotmc.org/resources/"+id+"/");
-            PLUGIN.getServer().getConsoleSender().sendMessage(PLUGIN.getMsg().getPrefix() + ChatColor.GOLD + " Version: " + ChatColor.GREEN + response.toString() + ChatColor.AQUA + " Using Version: " + ChatColor.DARK_AQUA + ver);
-            PLUGIN.UP2Date = false;
-            for (String s : changelog) {
-                if (s.isEmpty())
-                    continue;
-                PLUGIN.getServer().getConsoleSender().sendMessage(PLUGIN.getMsg().getPrefix() + ChatColor.YELLOW + "  - " + s);
+            } catch (Exception e) {
+                Bukkit.getScheduler().runTask(PLUGIN, VersionChk::noConnection);
+                log.warning("Failed to check plugin version: " + e.getMessage());
             }
+        });
+    }
+
+    private static String fetchContent(String urlStr) throws Exception {
+        URL url = new URL(urlStr);
+        HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+
+        connection.setRequestMethod("GET");
+        connection.setRequestProperty("User-Agent", USER_AGENT);
+
+        int responseCode = connection.getResponseCode();
+        if (responseCode != 200) {
+            throw new Exception("Failed to fetch URL: " + urlStr + " Response code: " + responseCode);
         }
 
-        // Config Version:
+        try (BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream()))) {
+            StringBuilder content = new StringBuilder();
+            String line;
+            while ((line = reader.readLine()) != null) {
+                content.append(line);
+            }
+            return content.toString();
+        }
+    }
+
+    private static void updateConfigIfNeeded() throws Exception {
         double configVersion = PLUGIN.getConfig().getDouble("ConfigVersion");
-        if (configVersion<=1.2) {
+        boolean updated = false;
+
+        if (configVersion <= 1.2) {
             PLUGIN.getConfig().set("ConfigVersion", 1.3);
             PLUGIN.getBlacklistConf().set("doAutoSmeltBlacklist", false);
-            PLUGIN.getBlacklistConf().set("AutoSmeltBlacklist", Arrays.asList("OAK_LOG"));
-
-            File conf = new File(PLUGIN.getDataFolder(), "config.yml");
-            File fileBlacklist = new File(PLUGIN.getDataFolder(), "blacklist.yml");
-
-            PLUGIN.getConfig().save(conf);
-            PLUGIN.getBlacklistConf().save(fileBlacklist);
+            PLUGIN.getBlacklistConf().set("AutoSmeltBlacklist", List.of("OAK_LOG"));
+            updated = true;
         }
-        if (configVersion<=1.3) {
+        if (configVersion <= 1.3) {
             PLUGIN.getConfig().set("ConfigVersion", 1.4);
             PLUGIN.getBlacklistConf().set("doAutoSmeltBlacklist", false);
-            PLUGIN.getBlacklistConf().set("AutoSmeltBlacklist", Arrays.asList("OAK_LOG"));
+            PLUGIN.getBlacklistConf().set("AutoSmeltBlacklist", List.of("OAK_LOG"));
             PLUGIN.getConfig().set("usingSilkSpawnerPlugin", true);
             PLUGIN.getConfig().set("ignoreMobXPDrops", false);
-
-            File conf = new File(PLUGIN.getDataFolder(), "config.yml");
-            File fileBlacklist = new File(PLUGIN.getDataFolder(), "blacklist.yml");
-
-            PLUGIN.getConfig().save(conf);
-            PLUGIN.getBlacklistConf().save(fileBlacklist);
+            updated = true;
         }
 
-
+        if (updated) {
+            File confFile = new File(PLUGIN.getDataFolder(), "config.yml");
+            File blacklistFile = new File(PLUGIN.getDataFolder(), "blacklist.yml");
+            PLUGIN.getConfig().save(confFile);
+            PLUGIN.getBlacklistConf().save(blacklistFile);
+        }
     }
 
-    public static void noConnection(){
-        PLUGIN.getServer().getConsoleSender().sendMessage(PLUGIN.getMsg().getPrefix() + " " + ChatColor.LIGHT_PURPLE + "Cannot check for update's - No internet connection!");
+    public static void noConnection() {
+        PLUGIN.getMsg().sendToConsole(NO_CONNECTION_MSG);
     }
-
 }
